<resources>
    <string name="app_name">SelectfileAndEditimage</string>
    <string name="no_images">no found the image</string>
    <string name="images">%d images</string>
    <string name="save">save</string>
    <string name="apply">apply</string>

    <string name="stickers">stickers</string>
    <string name="fliter">fliter</string>
    <string name="crop">crop</string>
    <string name="rotate">rotate</string>
    <string name="text">text</string>
    <string name="edit">edit</string>


    <string name="materialcolorpicker__app_name">Android Material Color Picker Dialog</string>
    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__inputColor">Color:</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="saving_image">save...</string>
    <string name="input_hint">input text ...</string>

    <string name="no_choose">please choose a image for edit</string>
    <string name="auto_newline">AutoNewline</string>
    <string name="save_error">Save error!</string>
    <string name="handing">loading...</string>

    <string-array name="fliters">
        <item>origin</item>
        <item>soft</item>
        <item>black</item>
        <item>classic</item>
        <item>gorgeous</item>
        <item>retro</item>
        <item>grace</item>
        <item>film</item>
        <item>memory</item>
        <item>yogurt</item>
        <item>fleeting</item>
        <item>shine</item>
    </string-array>

    <string name="more">more</string>
    <string name="exit_without_save">The edited image is not saved. Do you want to exit? </string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="beauty">beauty</string>
    <string name="smooth">smooth</string>
    <string name="white_skin">white skin</string>
    <string name="changeDegrees">旋转角度</string>
    <string name="editImg">编辑图片</string>
    <string name="cancle">取消</string>
    <string name="select_picture">选择图片</string>
    <string name="select_video">选择视频</string>
    <string name="select_file">选择文件</string>
    <string name="determine">确定</string>
    <string name="delete">删除</string>
    <string name="no_file">没有文件</string>
    <string name="audio_recorder">录音</string>
    <string name="finish">完成</string>
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="editPicture">编辑</string>
    <string name="done">完成</string>
</resources>
