<!--<HorizontalScrollView-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:id="@+id/tools"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="fill_parent"-->
<!--android:scrollbars="none">-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/btn_paint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"/>

    <TextView
        android:id="@+id/btn_crop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/crop"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"/>

    <TextView
        android:id="@+id/btn_rotate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rotate"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"/>

    <TextView
        android:id="@+id/btn_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"/>

    <TextView
        android:id="@+id/btn_beauty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/beauty"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_stickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/stickers"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_fliter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fliter"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone"/>
</LinearLayout>
    <!--</HorizontalScrollView>-->

