<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/work_space"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.wqj.selectfileandeditimage.editimage.view.imagezoom.ImageViewTouch
            android:id="@+id/main_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"/>

        <com.wqj.selectfileandeditimage.editimage.view.StickerView
            android:id="@+id/sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.wqj.selectfileandeditimage.editimage.view.CropImageView
            android:id="@+id/crop_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.wqj.selectfileandeditimage.editimage.view.RotateImageView
            android:id="@+id/rotate_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.wqj.selectfileandeditimage.editimage.view.TextStickerView
            android:id="@+id/text_sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.wqj.selectfileandeditimage.editimage.view.CustomPaintView
            android:id="@+id/custom_paint_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="#30333333">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/cancle"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <ViewFlipper
            android:id="@+id/banner_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:flipInterval="1000"
            android:gravity="center">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#388e3c"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
        </ViewFlipper>
    </FrameLayout>

    <com.wqj.selectfileandeditimage.editimage.view.CustomViewPager
        android:id="@+id/bottom_gallery"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#30333333"
        android:overScrollMode="never"/>
</RelativeLayout>