<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_select_file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                tools:context=".selectpicture.SelectFileActivity">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorMain">

                <RelativeLayout
                    android:id="@+id/rl_back"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_arrow_back_black_24dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/select_file"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true">

                    <Button
                        android:id="@+id/btn_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/shape_btn"
                        android:text="@string/determine"
                        android:textColor="@color/colorMain"/>
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/lv_fileList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:scrollbars="none"
        >
    </ListView>

    <RelativeLayout
        android:id="@+id/rl_noFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_noFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_folder_open_black_24dp"/>

        <TextView
            android:id="@+id/tv_noFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_noFile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/no_file"/>
    </RelativeLayout>
</RelativeLayout>
